--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Google Analytics Class</title>
 </head>
 <body>
- Hello Google Analytics
+ Hello Google Analytics. This is homepage.
+ <p>Go to the <a href="second.html">second page</a></p>
 </body>
 </html>
