--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
 <head>
+ 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PHDC7WXXJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PHDC7WXXJ');
+</script>
+ 
 <title>Google Analytics Class</title>
 </head>
 <body>
  Hello Google Analytics. This is homepage.
  <p>Go to the <a href="second.html">second page</a></p>
 </body>
+ 
 </html>
