--- a/second.html
+++ b/second.html
@@ -1,5 +1,16 @@
 <html>
   <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PHDC7WXXJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PHDC7WXXJ');
+</script>
+    
   <title>second page</title>
   </head>
   <body>
